--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,13 @@
-html,
+@font-face {
+  font-family: "Montserrat", sans-serif;
+  src: url("/Montserrat.ttf");
+}
+
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  /* font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif; */
 }
 
 a {
@@ -18,6 +22,7 @@ a {
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
+    font-family: "Poppins";
   }
   body {
     color: white;
