--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,8 +1,8 @@
-@font-face {
+/* @font-face {
   font-family: "Montserrat", sans-serif;
   src: url("/Montserrat.ttf");
-}
-
+} */
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap");
 body {
   padding: 0;
   margin: 0;
@@ -22,7 +22,8 @@ a {
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
-    font-family: "Poppins";
+    font-family: "Poppins", sans-serif;
+    /* font-weight: 700; */
   }
   body {
     color: white;
